# ragflow

./: .gitignore  README.md
simple-rag/: README.md
simple-rag/backend/: .env.example  main.py  pyproject.toml  requirements.txt  stop-backend.bat  stop-backend.ps1
simple-rag/backend/app/: __init__.py
simple-rag/backend/app/api/: chat.py  knowledge.py
simple-rag/backend/app/core/: __init__.py  llm_config.py  logger.py  middleware.py  rag_config.py  response.py
simple-rag/backend/app/models/: rag_chat.py
simple-rag/backend/app/services/: embedding_service.py  file_parser.py  rag_pipeline.py  reranker.py  vector_store_memory.py
simple-rag/backend/app/utils/: chunk_strategies.py  text_utils.py
simple-rag/frontend/: index.html  package-lock.json  package.json  vite.config.ts
simple-rag/frontend/src/: App.vue  style.css
simple-rag/frontend/src/api/: chat.ts  knowledge.ts
simple-rag/frontend/src/components/: ChatArea.vue  KnowledgeUpload.vue
